tg-6305 [P1] Error 400 al ver la HC desde una institucion distinta a la de la internación activa}

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -13,7 +13,7 @@
 							<span class="center-align">{{ 'ambulatoria.paciente.card.SANGUINEOUS' | translate }}</span>
 							<h1 class="color-primary bold" id="blood-type">{{ bloodType }}</h1>
 					</div>
-					<div *ngIf="internmentEpisodeProcess?.inProgress" id="coverage-container">
+					<div *ngIf="internmentEpisodeProcess?.id && internmentEpisodeProcess?.inProgress" id="coverage-container">
 						<div fxLayout="row">
 							<div fxLayout="column">
 								<mat-icon class="color-primary" fontSet="material-icons-outlined">health_and_safety</mat-icon>
