--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/patient-profile/patient-profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/patient-profile/patient-profile.component.html
@@ -1,7 +1,8 @@
 <app-content width="full">
 	<section fxLayout="column" fxFlex="40%" fxFlex.lt-md="100%" fxLayoutGap="15px">
 		<div>
-			<app-patient-card *ngIf="personPhoto" [patient]="patientBasicData" [personPhoto]="personPhoto">
+			<app-patient-card *ngIf="personPhoto" [patient]="patientBasicData" [personPhoto]="personPhoto"
+							  [internmentEpisodeProcess]="internmentEpisode">
 				<div header class="header">
 					<app-patient-type-logo [patientTypeData]="patientTypeData"></app-patient-type-logo>
 				</div>
