--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.html
@@ -15,7 +15,7 @@
                 <mat-card-subtitle>
                     <span id="gender_age" [translate]=viewGenderAge()></span>
                 </mat-card-subtitle>
-				<mat-card-subtitle *ngIf="internmentEpisodeProcess?.inProgress">
+				<mat-card-subtitle *ngIf="internmentEpisodeProcess?.id && internmentEpisodeProcess?.inProgress">
                     <div class="label-episodes label-internment-episode uppercase">
                         <strong class="uppercase" [translate]="'ambulatoria.paciente.card.INTERNMENT_EPISODE_ACTIVE'"></strong>
                     </div>
