tg-6308 [P2] Se visualiza boton "VER HISTORIA CLINICA" en Internacion y Guardia

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/patient-profile/patient-profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/patient-profile/patient-profile.component.html
@@ -9,6 +9,7 @@
 				<div content>
 					<app-personal-information [personalInformation]="personalInformation"
 					                          [patientMedicalCoverage]="patientMedicalCoverage"
+											  [showButtonGoToMedicalHistory]="showButtonGoToMedicalHistory"
 											  (goToMedicalHistory)="goToMedicalHistory()">
 					</app-personal-information>
 				</div>
