--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -14,6 +14,38 @@
 							<span class="center-align">{{ 'ambulatoria.paciente.card.SANGUINEOUS' | translate }}</span>
 							<h1 class="color-primary bold" id="blood-type">{{ bloodType }}</h1>
 					</div>
+					<div id="allergy-container" fxLayoutAlign="center center">
+						<div *ngIf="criticalAllergies.length>0">
+							<div fxLayout="row" *ngFor="let allergy of criticalAllergies.slice(0,limitAllergies)">
+								<div fxLayout="column">
+									<mat-icon class="color-warn allergy-icon" fontSet="material-icons-outlined">block</mat-icon>
+								</div>
+								<div fxLayout="column">
+									<div fxLayout="row">
+										<span class="capitalize-first-letter">{{allergy.snomed.pt}}</span>
+									</div>
+								</div>
+							</div>
+							<div *ngIf="criticalAllergies.length>limitAllergies">
+								<button class="allergies-button" (click)="openAllergies()" mat-button type="button" color="primary">
+							<span [translate]="'ambulatoria.paciente.card.MORE_CRITICAL_ALLERGIES'"
+							[translateParams]="{allergies: criticalAllergies.length-limitAllergies}"></span>
+								</button>
+							</div>
+						</div>
+						<div *ngIf="criticalAllergies.length==0">
+							<div fxLayout="row">
+								<div fxLayout="column">
+									<mat-icon class="color-disabled allergy-icon" fontSet="material-icons-outlined">block</mat-icon>
+								</div>
+								<div fxLayout="column">
+									<div fxLayout="row">
+										<span class="color-disabled">{{ 'ambulatoria.paciente.card.NO_CRITICAL_ALLERGIES' | translate}}</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div *ngIf="internmentEpisodeProcess?.id && internmentEpisodeProcess?.inProgress" id="coverage-container">
 						<div fxLayout="row">
 							<div fxLayout="column">
