--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -70,7 +70,7 @@
 									<div fxLayout="row">
 										<span> {{ 'ambulatoria.paciente.card.internment.AFFILIATE_NUMBER' | translate }}
 											<ng-container *ngIf="!internmentEpisodeCoverageInfo?.affiliateNumber">
-												<span class="no-information">{{ 'ambulatoria.paciente.card.internment.NO_INFO' | translate }}</span>
+												<span class="color-grey">{{ 'ambulatoria.paciente.card.internment.NO_INFO' | translate }}</span>
 											</ng-container>
 											<ng-container *ngIf="internmentEpisodeCoverageInfo?.affiliateNumber">
 												<span>{{ internmentEpisodeCoverageInfo?.affiliateNumber }}</span>
@@ -79,7 +79,7 @@
 									</div>
 								</ng-container>
 								<ng-container *ngIf="!internmentEpisodeCoverageInfo">
-									<div fxLayout="row" class="no-information">
+									<div fxLayout="row" class="color-grey">
 										<span>{{ 'ambulatoria.paciente.card.internment.WITHOUT_COVERAGE' | translate }}</span>
 									</div>
 								</ng-container>
@@ -87,26 +87,70 @@
 						</div>
 					</div>
 			</div>
-			<div buttons-content>
-				<div fxLayout="row" fxLayout.gt-xs="column" fxLayoutGap="10px">
-					<ng-container *ngIf="hasNewConsultationEnabled$ | async">
-						<ng-container
-							*ngIf="CurrentUserIsAllowedToMakeBothQueries; else currentUserIsNotAllowedToMakeBothQueries">
-							<button id="nueva_consulta" mat-flat-button color="primary" mat-button
-								[matMenuTriggerFor]="menu">
-								{{ 'ambulatoria.paciente.card.buttons.NUEVA_CONSULTA' | translate | uppercase }}</button>
-							<mat-menu #menu="matMenu">
-								<button mat-menu-item
-									(click)="referenceNotificationService.hasReferenceNotification()">Ambulatoria</button>
-								<button mat-menu-item (click)="openNuevaConsultaEnfermeria()">Enfermeria</button>
-							</mat-menu>
+			<div buttons-content fxLayout="column" fxLayoutGap="10px" fxLayout.xs="row" fxLayoutAlign="center center">
+				<ng-container *ngIf="currentUserIsAllowedToDoAConsultation else hasOdontologyRole">
+					<button id="acciones" mat-flat-button color="primary" mat-button [matMenuTriggerFor]="menu"
+							*ngIf="(hasInternmentEpisodeInThisInstitution && !hasMedicalDischarge && hasMedicalRole) || (hasInternmentEpisodeInThisInstitution && !epicrisisDoc?.confirmed && !hasMedicalRole) || (hasNewConsultationEnabled$ | async)">
+						{{ 'ambulatoria.paciente.card.buttons.actions.ACTIONS' | translate | uppercase }}
+					</button>
+				</ng-container>
+
+				<ng-template #hasOdontologyRole>
+					<button id="acciones_odontologo" mat-flat-button color="primary" mat-button [matMenuTriggerFor]="menu"
+						*ngIf="hasInternmentEpisodeInThisInstitution && !epicrisisDoc?.confirmed">
+						{{ 'ambulatoria.paciente.card.buttons.actions.ACTIONS' | translate | uppercase }}
+					</button>
+				</ng-template>
+				<mat-menu #menu="matMenu">
+					<div id="internacion" *ngIf="(hasInternmentEpisodeInThisInstitution && !hasMedicalDischarge && hasMedicalRole) || (hasInternmentEpisodeInThisInstitution && !epicrisisDoc?.confirmed && !hasMedicalRole)">
+					<mat-label class="actions-labels color-grey">
+							{{'ambulatoria.paciente.internacion.TAB_LABEL' | translate | uppercase }}</mat-label>
+						<ng-container *ngIf="!epicrisisDoc">
+							<ng-container *ngIf="!anamnesisDoc || !anamnesisDoc.confirmed">
+								<button mat-menu-item class="actions"
+									*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
+									{{'ambulatoria.paciente.card.buttons.actions.ANAMNESIS' | translate}}</button>
+							</ng-container>
+							<ng-container
+								*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
+								<button mat-menu-item class="actions">
+									{{'ambulatoria.paciente.card.buttons.actions.EVOLUTION_NOTE' | translate}}</button>
+							</ng-container>
+							<ng-container *ngIf="anamnesisDoc?.confirmed && lastEvolutionNoteDoc?.confirmed">
+								<button mat-menu-item *appHasRole="['ESPECIALISTA_MEDICO']" class="actions">
+									{{'ambulatoria.paciente.card.buttons.actions.EPICRISIS' | translate}}</button>
+							</ng-container>
 						</ng-container>
-						<div fxLayout="end" fxLayoutAlign="end">
-							<button mat-stroked-button color="primary" (click)="goToPatient()" btn-block>{{
-								'ambulatoria.paciente.card.buttons.SHOW_PATIENT' | translate | uppercase }}</button>
-						</div>
+						<ng-container *ngIf="epicrisisDoc?.confirmed && !hasMedicalDischarge">
+							<button mat-menu-item *appHasRole="['ESPECIALISTA_MEDICO']" class="actions">
+								{{'ambulatoria.paciente.card.buttons.actions.MEDICAL_DISCHARGE' | translate}}</button>
+						</ng-container>
+					</div>
+
+					<ng-container *ngIf="hasNewConsultationEnabled$ | async">
+
+						<ng-container id="ambulatoria" *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']" >
+							<mat-divider *ngIf="hasInternmentEpisodeInThisInstitution && !hasMedicalDischarge"></mat-divider>
+							<mat-label class="actions-labels color-grey">{{'ambulatoria.paciente.card.buttons.actions.AMBULATORY' | translate | uppercase }}</mat-label>
+							<button id="nueva_consulta" class="actions" mat-menu-item
+								(click)="referenceNotificationService.hasReferenceNotification()">
+								{{ 'ambulatoria.paciente.card.buttons.actions.NUEVA_CONSULTA' | translate }}</button>
+						</ng-container>
+
+						<ng-container id="enfermeria" *appHasRole="['ENFERMERO']">
+							<mat-divider
+								*ngIf="CurrentUserIsAllowedToMakeBothQueries || hasInternmentEpisodeInThisInstitution">
+							</mat-divider>
+							<mat-label class="actions-labels color-grey">{{'ambulatoria.paciente.card.buttons.actions.NURSING' | translate | uppercase }}</mat-label>
+							<button mat-menu-item id="nueva_consulta" class="actions"
+								(click)="openNuevaConsultaEnfermeria()">
+								{{ 'ambulatoria.paciente.card.buttons.actions.NUEVA_CONSULTA' | translate }}</button>
+						</ng-container>
 					</ng-container>
-				</div>
+				</mat-menu>
+
+				<button mat-stroked-button color="primary" (click)="goToPatient()" btn-block>
+					{{ 'ambulatoria.paciente.card.buttons.SHOW_PATIENT' | translate | uppercase }}</button>
 			</div>
 		</app-patient-card>
 
@@ -154,7 +198,12 @@
 							<span>{{ 'ambulatoria.paciente.internacion.TAB_LABEL' | translate | uppercase }}</span>
 						</ng-template>
 						<ng-template matTabContent>
-							<app-internacion-paciente [internmentEpisodeId]="internmentEpisodeProcess.id"></app-internacion-paciente>
+							<app-internacion-paciente [internmentEpisodeId]="internmentEpisodeProcess.id"
+								(anamnesisDocEmmiter)="setAnamnesisDoc($event)"
+								(epicrisisDocEmmiter)="setEpicrisisDoc($event)"
+								(lastEvolutionNoteDocEmmiter)="setLastEvolutionNoteDoc($event)"
+								(hasMedicalDischargeEmmiter)="setHasMedicalDischarge($event)">
+							</app-internacion-paciente>
 						</ng-template>
 					</mat-tab>
 					<mat-tab id="tab_indications">
@@ -220,14 +269,4 @@
 
 <ng-template #loading>
 	<mat-progress-bar mode="indeterminate"></mat-progress-bar>
-</ng-template>
-
-<ng-template #currentUserIsNotAllowedToMakeBothQueries>
-	<button *appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']" id="nueva_consulta" mat-flat-button
-		color="primary" mat-button (click)="referenceNotificationService.hasReferenceNotification()">
-		{{ 'ambulatoria.paciente.card.buttons.NUEVA_CONSULTA' | translate | uppercase }}</button>
-
-	<button *appHasRole="['ENFERMERO']" id="nueva_consulta" mat-flat-button color="primary" mat-button
-		(click)="openNuevaConsultaEnfermeria()">
-		{{ 'ambulatoria.paciente.card.buttons.NUEVA_CONSULTA' | translate | uppercase }}</button>
 </ng-template>
